<resources>
    <string name="app_name">UserDetailsAppLaunch</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Please enter Valid Password</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome To App Launch</string>
    <string name="user_form_text">User Details</string>
    <string name="user_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="save_lbl">Save</string>
    <string name="cancel_lbl">Cancel</string>
</resources>